--- a/app/src/main/res/layout/writer.xml
+++ b/app/src/main/res/layout/writer.xml
@@ -15,7 +15,7 @@
         android:layout_marginTop="20dp"
         android:layout_marginRight="5dp"
         android:layout_marginBottom="20dp"
-        android:backgroundTint="#ff30ab50"
+        android:backgroundTint="#ff006d2c"
         android:textSize="25sp"
         android:textColor="#ff37b058" />
 
@@ -25,8 +25,19 @@
         android:text="Push Message"
         android:id="@+id/pushButton"
         android:layout_gravity="center_horizontal"
-        android:background="#ff323330"
+        android:background="#ff3E403C"
         android:onClick="PushMessage"
         android:textSize="20sp"
         android:textColor="#ff31b054" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="Status: Ready"
+        android:id="@+id/statusText"
+        android:layout_gravity="right"
+        android:layout_marginTop="25dp"
+        android:paddingRight="5dp"
+        android:textColor="#ff32a852" />
 </LinearLayout>
