--- a/app/src/main/res/layout/writer.xml
+++ b/app/src/main/res/layout/writer.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#ff323330">
@@ -28,7 +28,9 @@
         android:background="#ff3E403C"
         android:onClick="PushMessage"
         android:textSize="20sp"
-        android:textColor="#ff31b054" />
+        android:textColor="#ff31b054"
+        android:layout_below="@+id/messageText"
+        android:layout_centerHorizontal="true" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -37,7 +39,10 @@
         android:text="Status: Ready"
         android:id="@+id/statusText"
         android:layout_gravity="right"
-        android:layout_marginTop="25dp"
         android:paddingRight="5dp"
-        android:textColor="#ff32a852" />
-</LinearLayout>
+        android:textColor="#ff32a852"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:paddingBottom="5dp" />
+</RelativeLayout>
