--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,7 +2,9 @@
 
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <!-- Customize your theme here. -->
+        <item name="colorControlNormal">#ff37b058</item>
+        <item name="colorControlActivated">#ff37b058</item>
+        <item name="colorControlHighlight">#ff37b058</item>
     </style>
 
 </resources>
