--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,4 +1,4 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -19,10 +19,12 @@
         android:paddingTop="75dp"
         android:paddingLeft="50dp"
         android:paddingRight="50dp"
-        android:layout_marginTop="50dp"
         android:textSize="18sp"
         android:onClick="write"
-        android:textColor="#ff37b058" />
+        android:textColor="#ff37b058"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="40dp" />
 
     <Button
         android:layout_width="wrap_content"
@@ -31,12 +33,25 @@
         android:id="@+id/readButton"
         android:layout_gravity="center_horizontal"
         android:background="@drawable/circle_button"
-        android:layout_marginTop="50dp"
         android:paddingLeft="50dp"
         android:paddingTop="75dp"
         android:paddingRight="50dp"
         android:paddingBottom="75dp"
         android:textSize="18sp"
         android:onClick="read"
-        android:textColor="#ff424340" />
-</LinearLayout>
+        android:textColor="#ff424340"
+        android:layout_below="@id/writeButton"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="40dp" />
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Help"
+        android:id="@+id/helpButton"
+        android:layout_gravity="center_horizontal"
+        android:background="@drawable/rect_ring"
+        android:textColor="#ff37b058"
+        android:textSize="16sp"
+        android:layout_alignParentBottom="true" />
+</RelativeLayout>
