--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,7 +24,8 @@
         android:textColor="#ff37b058"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="40dp" />
+        android:layout_marginTop="35dp"
+        android:layout_marginBottom="5dp" />
 
     <Button
         android:layout_width="wrap_content"
@@ -42,7 +43,8 @@
         android:textColor="#ff424340"
         android:layout_below="@id/writeButton"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="40dp" />
+        android:layout_marginTop="35dp"
+        android:layout_marginBottom="5dp" />
 
     <Button
         android:layout_width="match_parent"
@@ -52,6 +54,6 @@
         android:layout_gravity="center_horizontal"
         android:background="@drawable/rect_ring"
         android:textColor="#ff37b058"
-        android:textSize="16sp"
+        android:textSize="18sp"
         android:layout_alignParentBottom="true" />
 </RelativeLayout>
