Added Uniform Colors

--- a/app/src/main/res/drawable/circle_button_ring.xml
+++ b/app/src/main/res/drawable/circle_button_ring.xml
@@ -6,8 +6,7 @@
             android:innerRadius="0dp"
             android:thickness="75dp"
             android:useLevel="false">
-            <stroke android:color="#ff37b058"
-                android:width="2dp"/>
+            <solid android:color="@color/DefaultStyle_Dark"/>
         </shape>
     </item>
     <item android:state_focused="true">
@@ -16,8 +15,7 @@
             android:innerRadius="0dp"
             android:thickness="75dp"
             android:useLevel="false">
-            <stroke android:color="#ff37b058"
-                android:width="2dp"/>
+            <solid android:color="@color/DefaultStyle_Dark"/>
         </shape>
     </item>
     <item >
@@ -26,7 +24,7 @@
             android:innerRadius="0dp"
             android:thickness="75dp"
             android:useLevel="false">
-            <stroke android:color="#ff37b058"
+            <stroke android:color="@color/DefaultStyle"
                 android:width="2dp"/>
         </shape>
     </item>
