--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
-    android:background="#ff323330">
+    android:background="@color/DefaultStyle_Background">
 
     <Button
         android:layout_width="wrap_content"
@@ -21,7 +21,7 @@
         android:paddingRight="50dp"
         android:textSize="18sp"
         android:onClick="write"
-        android:textColor="#ff37b058"
+        android:textColor="@color/DefaultStyle"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="35dp"
@@ -40,7 +40,7 @@
         android:paddingBottom="75dp"
         android:textSize="18sp"
         android:onClick="read"
-        android:textColor="#ff424340"
+        android:textColor="@color/DefaultStyle_Background"
         android:layout_below="@id/writeButton"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="35dp"
@@ -53,7 +53,7 @@
         android:id="@+id/helpButton"
         android:layout_gravity="center_horizontal"
         android:background="@drawable/rect_ring"
-        android:textColor="#ff37b058"
+        android:textColor="@color/DefaultStyle"
         android:textSize="18sp"
         android:layout_alignParentBottom="true" />
 </RelativeLayout>
