--- a/app/src/main/res/layout/reader.xml
+++ b/app/src/main/res/layout/reader.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#ff323330">
+    android:background="@color/DefaultStyle_Background">
 
     <TextView
         android:layout_width="wrap_content"
@@ -12,7 +12,7 @@
         android:id="@+id/statusText_Reader"
         android:layout_gravity="right"
         android:paddingRight="5dp"
-        android:textColor="#ff32a852"
+        android:textColor="@color/DefaultStyle"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
@@ -30,7 +30,7 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:gravity="center_horizontal"
-        android:textColor="#ff37b058"
+        android:textColor="@color/DefaultStyle"
         android:textSize="35sp"
         android:layout_margin="5dp" />
 
