--- a/app/src/main/res/layout/writer.xml
+++ b/app/src/main/res/layout/writer.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#ff323330">
+    android:background="@color/DefaultStyle_Background">
 
     <EditText
         android:layout_width="match_parent"
@@ -16,7 +16,7 @@
         android:layout_marginRight="5dp"
         android:layout_marginBottom="20dp"
         android:textSize="25sp"
-        android:textColor="#ff37b058" />
+        android:textColor="@color/DefaultStyle" />
 
     <Button
         android:layout_width="wrap_content"
@@ -24,10 +24,10 @@
         android:text="Push Message"
         android:id="@+id/pushButton"
         android:layout_gravity="center_horizontal"
-        android:background="#ff3E403C"
+        android:background="@color/DefaultStyle_Background"
         android:onClick="PushMessage"
         android:textSize="20sp"
-        android:textColor="#ff31b054"
+        android:textColor="@color/DefaultStyle"
         android:layout_below="@+id/messageText"
         android:layout_centerHorizontal="true" />
 
@@ -39,7 +39,7 @@
         android:id="@+id/statusText"
         android:layout_gravity="right"
         android:paddingRight="5dp"
-        android:textColor="#ff32a852"
+        android:textColor="@color/DefaultStyle"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
