Added Uniform Colors

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,14 +33,14 @@
         android:text="Read Message"
         android:id="@+id/readButton"
         android:layout_gravity="center_horizontal"
-        android:background="@drawable/circle_button"
+        android:background="@drawable/circle_button_ring"
         android:paddingLeft="50dp"
         android:paddingTop="75dp"
         android:paddingRight="50dp"
         android:paddingBottom="75dp"
         android:textSize="18sp"
         android:onClick="read"
-        android:textColor="@color/DefaultStyle_Background"
+        android:textColor="@color/DefaultStyle"
         android:layout_below="@id/writeButton"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="35dp"
