Added Uniform Colors

--- a/app/src/main/res/drawable/rect.xml
+++ b/app/src/main/res/drawable/rect.xml
@@ -26,7 +26,7 @@
             android:innerRadius="0dp"
             android:thickness="75dp"
             android:useLevel="false">
-            <stroke android:color="@color/DefaultStyle" android:width="2dp"/>
+            <solid android:color="@color/DefaultStyle"></solid>
             <corners android:radius="7dp"/>
         </shape>
     </item>
