--- a/app/src/main/res/layout/writer.xml
+++ b/app/src/main/res/layout/writer.xml
@@ -11,12 +11,13 @@
         android:ems="10"
         android:id="@+id/messageText"
         android:padding="5dp"
-        android:layout_marginLeft="5dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginRight="5dp"
-        android:layout_marginBottom="20dp"
-        android:textSize="25sp"
-        android:textColor="@color/DefaultStyle" />
+        android:textSize="28sp"
+        android:textColor="@color/DefaultStyle"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="50dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp" />
 
     <Button
         android:layout_width="wrap_content"
@@ -24,11 +25,15 @@
         android:text="Push Message"
         android:id="@+id/pushButton"
         android:layout_gravity="center_horizontal"
-        android:background="@color/DefaultStyle_Background"
+        android:background="@drawable/circle_button_ring"
         android:onClick="PushMessage"
-        android:textSize="20sp"
+        android:textSize="18sp"
         android:textColor="@color/DefaultStyle"
-        android:layout_below="@+id/messageText"
+        android:paddingLeft="10dp"
+        android:paddingTop="75dp"
+        android:paddingRight="10dp"
+        android:paddingBottom="75dp"
+        android:layout_centerVertical="true"
         android:layout_centerHorizontal="true" />
 
     <TextView
