--- a/app/src/main/res/layout/reader.xml
+++ b/app/src/main/res/layout/reader.xml
@@ -24,14 +24,13 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Scan Tag"
         android:id="@+id/readerText"
-        android:layout_alignParentTop="true"
-        android:layout_alignRight="@+id/statusText_Reader"
-        android:layout_alignEnd="@+id/statusText_Reader"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
         android:gravity="center_horizontal"
         android:textColor="@color/DefaultStyle"
-        android:textSize="35sp"
-        android:layout_margin="5dp" />
+        android:textSize="40sp"
+        android:layout_centerVertical="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
 
 </RelativeLayout>
