--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Write Message"
+        android:text="Write Flyer"
         android:id="@+id/writeButton"
         android:layout_gravity="center_horizontal"
         android:background="@drawable/circle_button_ring"
@@ -30,7 +30,7 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Read Message"
+        android:text="Read Flyer"
         android:id="@+id/readButton"
         android:layout_gravity="center_horizontal"
         android:background="@drawable/circle_button_ring"
