Modify Writer.java and layout

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,77 +1,79 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/DefaultStyle_Background"
     android:orientation="vertical"
+    android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
-    android:background="@color/DefaultStyle_Background">
+    tools:context=".MainActivity">
 
     <Button
+        android:id="@+id/writeButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Write Flyer"
-        android:id="@+id/writeButton"
-        android:layout_gravity="center_horizontal"
-        android:background="@drawable/circle_button_ring"
-        android:paddingBottom="75dp"
-        android:paddingTop="75dp"
-        android:paddingLeft="50dp"
-        android:paddingRight="50dp"
-        android:textSize="18sp"
-        android:onClick="write"
-        android:textColor="@color/DefaultStyle"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginBottom="5dp"
         android:layout_marginTop="85dp"
-        android:layout_marginBottom="5dp" />
+        android:background="@drawable/circle_button_ring"
+        android:onClick="write"
+        android:paddingBottom="75dp"
+        android:paddingLeft="50dp"
+        android:paddingRight="50dp"
+        android:paddingTop="75dp"
+        android:text="Write Flyer"
+        android:textColor="@color/DefaultStyle"
+        android:textSize="18sp" />
 
     <Button
+        android:id="@+id/readButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Read Flyer"
-        android:id="@+id/readButton"
-        android:layout_gravity="center_horizontal"
-        android:background="@drawable/circle_button_ring"
-        android:paddingLeft="50dp"
-        android:paddingTop="75dp"
-        android:paddingRight="50dp"
-        android:paddingBottom="75dp"
-        android:textSize="18sp"
-        android:onClick="read"
-        android:textColor="@color/DefaultStyle"
         android:layout_below="@id/writeButton"
         android:layout_centerHorizontal="true"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginBottom="5dp"
         android:layout_marginTop="15dp"
-        android:layout_marginBottom="5dp" />
+        android:background="@drawable/circle_button_ring"
+        android:onClick="read"
+        android:paddingBottom="75dp"
+        android:paddingLeft="50dp"
+        android:paddingRight="50dp"
+        android:paddingTop="75dp"
+        android:text="Read Flyer"
+        android:textColor="@color/DefaultStyle"
+        android:textSize="18sp" />
 
     <Button
+        android:id="@+id/helpButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Help"
-        android:id="@+id/helpButton"
-        android:layout_gravity="center_horizontal"
-        android:background="@drawable/rect"
-        android:textColor="@color/DefaultStyle_Background"
-        android:textSize="18sp"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
+        android:layout_gravity="center_horizontal"
+        android:background="@drawable/rect"
+        android:onClick="help"
         android:paddingLeft="75dp"
         android:paddingRight="75dp"
-        android:onClick="help" />
+        android:text="Help"
+        android:textColor="@color/DefaultStyle_Background"
+        android:textSize="18sp" />
 
     <TextView
+        android:id="@+id/mainCoverText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Welcome to Viral Flyer!"
-        android:id="@+id/mainCoverText"
-        android:gravity="center_vertical|center_horizontal"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
+        android:layout_marginTop="10dp"
+        android:gravity="center_vertical|center_horizontal"
+        android:text="Welcome to Viral Flyer!"
+        android:textAppearance="?android:attr/textAppearanceLarge"
         android:textColor="@color/DefaultStyle"
         android:textSize="30sp" />
 </RelativeLayout>
