--- a/app/src/main/res/layout/writer.xml
+++ b/app/src/main/res/layout/writer.xml
@@ -1,52 +1,137 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/scrollView"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_alignParentLeft="true"
+    android:layout_alignParentStart="true"
+    android:layout_alignParentTop="true">
+
+<RelativeLayout
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/DefaultStyle_Background">
+    android:background="@color/DefaultStyle_Background"
+    android:orientation="vertical">
 
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:inputType="textMultiLine"
-        android:ems="10"
-        android:id="@+id/messageText"
-        android:padding="5dp"
-        android:textSize="28sp"
-        android:textColor="@color/DefaultStyle"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="50dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp" />
+        <EditText
+            android:id="@+id/titleText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/TitleTextView"
+            android:layout_centerHorizontal="true"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:ems="10"
+            android:inputType="textMultiLine"
+            android:padding="5dp"
+            android:textColor="@color/DefaultStyle"
+            android:textSize="28sp" />
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Push Message"
-        android:id="@+id/pushButton"
-        android:layout_gravity="center_horizontal"
-        android:background="@drawable/circle_button_ring"
-        android:onClick="PushMessage"
-        android:textSize="18sp"
-        android:textColor="@color/DefaultStyle"
-        android:paddingLeft="25dp"
-        android:paddingTop="75dp"
-        android:paddingRight="25dp"
-        android:paddingBottom="75dp"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true" />
+        <Button
+            android:id="@+id/pushButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:background="@drawable/circle_button_ring"
+            android:onClick="PushMessage"
+            android:paddingBottom="75dp"
+            android:paddingLeft="25dp"
+            android:paddingRight="25dp"
+            android:paddingTop="75dp"
+            android:text="Push Message"
+            android:textColor="@color/DefaultStyle"
+            android:textSize="18sp"
+            android:layout_below="@+id/detailsText"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="40dp"
+            android:layout_marginBottom="10dp" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="Status: Ready"
-        android:id="@+id/statusText"
-        android:layout_gravity="right"
-        android:paddingRight="5dp"
-        android:textColor="@color/DefaultStyle"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:paddingBottom="5dp" />
-</RelativeLayout>
+        <TextView
+            android:id="@+id/statusText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_gravity="right"
+            android:paddingBottom="5dp"
+            android:paddingRight="5dp"
+            android:text="Status: Ready"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:textColor="@color/DefaultStyle" />
+
+        <TextView
+            android:id="@+id/TitleTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignEnd="@+id/titleText"
+            android:layout_alignLeft="@+id/titleText"
+            android:layout_alignParentTop="true"
+            android:layout_alignRight="@+id/titleText"
+            android:layout_alignStart="@+id/titleText"
+            android:layout_marginTop="20dp"
+            android:gravity="center_horizontal"
+            android:text="Event Title"
+            android:textColor="@color/DefaultStyle"
+            android:textSize="20sp" />
+
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            android:text="Event Date"
+            android:textColor="@color/DefaultStyle"
+            android:textSize="20sp"
+            android:layout_below="@+id/titleText"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="10dp" />
+
+        <EditText
+            android:id="@+id/dateText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:inputType="textMultiLine"
+            android:padding="5dp"
+            android:textColor="@color/DefaultStyle"
+            android:textSize="28sp"
+            android:layout_below="@+id/textView"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp" />
+
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            android:text="Event Details"
+            android:textColor="@color/DefaultStyle"
+            android:textSize="20sp"
+            android:layout_below="@+id/dateText"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="20dp" />
+
+        <EditText
+            android:id="@+id/detailsText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:inputType="textMultiLine"
+            android:padding="5dp"
+            android:textColor="@color/DefaultStyle"
+            android:textSize="28sp"
+            android:nestedScrollingEnabled="true"
+            android:layout_below="@+id/textView2"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:gravity="left" />
+
+    </RelativeLayout>
+</ScrollView>
