--- a/app/src/main/res/layout/writer.xml
+++ b/app/src/main/res/layout/writer.xml
@@ -3,15 +3,16 @@
 <ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/scrollView"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
     android:layout_alignParentLeft="true"
     android:layout_alignParentStart="true"
-    android:layout_alignParentTop="true">
+    android:layout_alignParentTop="true"
+    android:background="@color/DefaultStyle_Background">
 
 <RelativeLayout
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     android:background="@color/DefaultStyle_Background"
     android:orientation="vertical">
 
